<resources>
    <string name="app_name">RoutePlanner</string>
    <string name="RouteMainTitle"> <u>Main Title</u> </string>
    <string name="RouteDistance"> Distance:  </string>
    <string name="TimesRun"> Number of times Run: </string>
    <string name="AverageSpeed"> Average speed: </string>
    <string name="button_goto_run_route_text">Run a route</string>
    <string name="button_goto_create_route_text">Create a new route</string>
    <string name="button_goto_route_overview_text">See your routes</string>
    <string name="button_goto_personal_statistics_text">Personal Statistics</string>
    <string name="button_create_route_text">Create route</string>
    <string name="remove_last_marker_text">Undo marker</string>
    <string name="route_length">Approx. route length:</string>
    <string name="name_your_route">Name your route:</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyDvEnjyFXXOywEWQtggkoeGq8wQZwYAFYs</string>
    <string name="totaldistance">TotalDistance</string>
    <string name="overall_average_speed">Overall Average Speed</string>
    <string name="totaltime">TotalTime</string>
    <string name="button_choose_route">Choose a route</string>
    <string name="button_run_route">Run route</string>
    <string name="textView_route_name">No route selected</string>
    <string name="textView_route_distance">Please select a route</string>
</resources>